[KNN] update iframe height to avoid double scroll

--- a/_sass/partials/_typography.scss
+++ b/_sass/partials/_typography.scss
@@ -85,14 +85,14 @@ h4, .h4 {
 }
 
 blockquote {
-  font-size: 1.25em; // 20px / 16px
+//  font-size: 1.25em; // 20px / 16px
   line-height: 1.25; // 25px / 20px
   padding: 0;  
 }
 
 @media (min-width: 43.75em) {
   blockquote {
-    font-size: 1.5em; // 24px / 16px
+//    font-size: 1.5em; // 24px / 16px
     line-height: 1.45833333; // 35px / 24px
   }
 }
